--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -25,6 +25,9 @@
 @import './core/typography';
 @import './core/drawers';
 
+// Layout
+@import './layout/mobile-nav';
+
 // Components
 @import './components/buttons';
 @import './components/hero-banner';
