--- a/src/styles/core/_helpers.scss
+++ b/src/styles/core/_helpers.scss
@@ -61,8 +61,8 @@
   @include visually-shown(absolute);
   z-index: 10000;
   padding: $grid-gutter / 2;
-  background-color: $color-body;
-  color: $color-body-text;
+  background-color: $white;
+  color: $black;
   transition: none;
 }
 
