--- a/src/styles/core/_layout.scss
+++ b/src/styles/core/_layout.scss
@@ -1,6 +1,6 @@
 /*================ General Layout ================*/
 html {
-  background-color: $color-body;
+  background-color: $white;
   box-sizing: border-box;
 }
 
