--- a/src/styles/core/_responsive-tables.scss
+++ b/src/styles/core/_responsive-tables.scss
@@ -48,7 +48,7 @@
       right: $grid-gutter / 2;
       left: $grid-gutter / 2;
       display: block;
-      border-bottom: 1px solid $color-border;
+      border-bottom: 1px solid $grey-light;
     }
   }
 }
