--- a/src/styles/templates/_cart.scss
+++ b/src/styles/templates/_cart.scss
@@ -11,11 +11,11 @@
   }
 
   .cart-table__row {
-    border-bottom: 1px solid $color-border;
+    border-bottom: 1px solid $grey-light;
   }
 
   .cart-table__row--header {
-    border-top: 1px solid $color-border;
+    border-top: 1px solid $grey-light;
   }
 
   .cart-table__header {
