--- a/src/styles/components/_placeholders.scss
+++ b/src/styles/components/_placeholders.scss
@@ -4,9 +4,9 @@
   max-width: 100%;
   height: 100%;
   max-height: 100%;
-  border: 1px solid $placeholder-color-foreground;
-  background-color: $placeholder-color-background;
-  fill: $placeholder-color-foreground;
+  border: 1px solid $grey-darker;
+  background-color: $grey-lighter;
+  fill: $grey-darker;
 }
 
 .placeholder-svg--small {
