--- a/src/styles/core/_drawers.scss
+++ b/src/styles/core/_drawers.scss
@@ -11,7 +11,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: $color-drawer-background;
+    background-color: $dark-tint;
     z-index: $z-index-drawer - 1;
     transition: $transition-drawer;
   }
@@ -27,7 +27,7 @@
 
 .drawer {
   position: fixed;
-  background-color: $color-body;
+  background-color: $white;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   z-index: $z-index-drawer;
@@ -58,7 +58,7 @@
 .drawer--left {
   width: $drawer-width;
   left: -$drawer-width;
-  border-right: 1px solid $color-border;
+  border-right: 1px solid $grey-light;
 
   &.drawer--open {
     transform: translateX($drawer-width);
@@ -68,7 +68,7 @@
 .drawer--right {
   width: $drawer-width;
   right: -$drawer-width;
-  border-left: 1px solid $color-border;
+  border-left: 1px solid $grey-light;
 
   &.drawer--open {
     transform: translateX(-$drawer-width);
@@ -89,7 +89,7 @@
   width: 100%;
   padding-bottom: spacing(3);
   margin-bottom: spacing(3);
-  border-bottom: 1px solid $color-border;
+  border-bottom: 1px solid $grey-light;
 }
 
 .drawer__title {
@@ -115,6 +115,6 @@
 
   &:active,
   &:focus {
-    background-color: darken($color-drawer-background, 5%);
+    background-color: darken($dark-tint, 5%);
   }
 }
