--- a/src/styles/core/_forms.scss
+++ b/src/styles/core/_forms.scss
@@ -41,12 +41,12 @@ input,
 textarea,
 select {
   max-width: 100%;
-  border: 1px solid $color-border;
+  border: 1px solid $grey-light;
   border-radius: 0;
 
   &[disabled] {
-    border-color: $color-disabled-border;
-    background-color: $color-disabled;
+    border-color: $grey-light;
+    background-color: $grey-lighter;
     cursor: default;
   }
 }
@@ -116,8 +116,8 @@ select::-ms-expand {
 
 // Force option color (affects IE only)
 option {
-  background-color: $color-body;
-  color: $color-body-text;
+  background-color: $white;
+  color: $black;
 }
 
 /*================ Form feedback messages ================*/
@@ -126,7 +126,7 @@ select,
 textarea {
   &.input-error {
     box-shadow: 0 0 rem(1px) rem(1px) $color-error-bg;
-    color: $color-body;
+    color: $white;
   }
 }
 
@@ -138,7 +138,7 @@ textarea {
 }
 
 .note {
-  border: 1px solid $color-border;
+  border: 1px solid $grey-light;
 }
 
 .form-message--success {
