--- a/src/styles/layout/_mobile-nav.scss
+++ b/src/styles/layout/_mobile-nav.scss
@@ -26,7 +26,7 @@
 .mobile-nav__link,
 .mobile-nav__toggle {
   padding: spacing(3) 0;
-  border-bottom: 1px solid $color-border;
+  border-bottom: 1px solid $grey-light;
 }
 
 .mobile-nav__link--child,
