--- a/src/styles/templates/_product.scss
+++ b/src/styles/templates/_product.scss
@@ -2,6 +2,6 @@
   border: 2px solid transparent;
 
   .active-thumbnail & {
-    border-color: $color-border;
+    border-color: $grey-light;
   }
 }
