--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -1,26 +1,23 @@
-// Text colors
-$color-body-text: #000;
+// Main colors
+$color-primary: blue;
+$color-accent: red;
+$color-secondary: orange;
+$color-tertiary: yellow;
+$color-quaternary: green;
 
-// Button colors
-$color-btn-primary: #000;
-$color-btn-primary-text: #fff;
-$color-btn-secondary: #fff;
-$color-btn-secondary-text: #000;
+// Greyscale
+$white: #fff;
+$grey-lighter: #eee;
+$grey-light: #ccc;
+$grey: #999;
+$grey-dark: #444;
+$grey-darker: #222;
+$black: #000;
 
-// Background colors
-$color-body: #fff;
-$color-drawer-background: rgba(0, 0, 0, 0.5);
+// Transparent background colors
+$dark-tint: rgba($black, 0.5);
 
-// Placeholders
-$placeholder-color-foreground: #161d25;
-$placeholder-color-background: #f9fafb;
-
-// Other colors
-$color-border: #ddd;
-
-// Helper colors for form error states
-$color-disabled: #eee;
-$color-disabled-border: #ccc;
+// Feedback colors
 $color-error: #c0392b;
 $color-error-bg: #e74c3c;
 $color-success: #27ae60;
