Update Sass code format
Adjusted based on stylelint rules

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -80,7 +80,7 @@
 
   {% section 'header' %}
 
-  <div id="PageContainer">
+  <div id="PageContainer" class="page-container">
     <main role="main" id="MainContent">
       {{ content_for_layout }}
     </main>
