--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -1,14 +1,14 @@
 // Text colors
-$color-body-text: #000;
+$color-body-text: #000000;
 
 // Button colors
-$color-btn-primary: #000;
-$color-btn-primary-text: #fff;
-$color-btn-secondary: #fff;
-$color-btn-secondary-text: #000;
+$color-btn-primary: #000000;
+$color-btn-primary-text: #ffffff;
+$color-btn-secondary: #ffffff;
+$color-btn-secondary-text: #000000;
 
 // Background colors
-$color-body: #fff;
+$color-body: #ffffff;
 $color-drawer-background: rgba(0, 0, 0, 0.5);
 
 // Placeholders
@@ -16,11 +16,11 @@ $placeholder-color-foreground: #161d25;
 $placeholder-color-background: #f9fafb;
 
 // Other colors
-$color-border: #ddd;
+$color-border: #dddddd;
 
 // Helper colors for form error states
-$color-disabled: #eee;
-$color-disabled-border: #ccc;
+$color-disabled: #eeeeee;
+$color-disabled-border: #cccccc;
 $color-error: #c0392b;
 $color-error-bg: #e74c3c;
 $color-success: #27ae60;
