--- a/src/styles/core/_typography.scss
+++ b/src/styles/core/_typography.scss
@@ -37,55 +37,56 @@ h6 {
   }
 }
 
-h1 {
+%h1 {
   font-size: font-size(h1);
 }
 
-h2 {
+%h2 {
   font-size: font-size(h2);
 }
 
-h3 {
+%h3 {
   font-size: font-size(h3);
 }
 
-h4 {
+%h4 {
   font-size: font-size(h4);
 }
 
-h5 {
+%h5 {
   font-size: font-size(h5);
 }
 
-h6 {
+%h6 {
   font-size: font-size(h6);
 }
 
-.h1 {
-  @extend h1;
+h1,.h1 {
+  @extend %h1;
 }
 
-.h2 {
-  @extend h2;
+h2,.h2 {
+  @extend %h2;
 }
 
-.h3 {
-  @extend h3;
+h3,.h3 {
+  @extend %h3;
 }
 
-.h4 {
-  @extend h4;
+h4,.h4 {
+  @extend %h4;
 }
 
-.h5 {
-  @extend h5;
+h5,.h5 {
+  @extend %h5;
 }
 
-.h6 {
-  @extend h6;
+h6,.h6 {
+  @extend %h6;
 }
 
 p {
+
   &:not(:last-child) {
     margin: 0 0 spacing(3);
   }
@@ -94,6 +95,7 @@ p {
 a {
   color: $color-body-text;
   text-decoration: none;
+
   &:focus {
     color: inherit;
   }
