Update address package and page components

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -39,6 +39,7 @@
 @import './components/responsive-images';
 @import './components/product-card';
 @import './components/article-card';
+@import './components/address-forms';
 
 // Sections
 @import './sections/blog-posts';
