--- a/src/templates/customers/addresses.liquid
+++ b/src/templates/customers/addresses.liquid
@@ -15,98 +15,108 @@
       {% form 'customer_address', customer.new_address %}
         <h2>{{ 'customer.addresses.add_new' | t }}</h2>
 
-        <label for="AddressFirstNameNew">
-          {{ 'customer.addresses.first_name' | t }}
-        </label>
-        <input type="text"
-              name="address[first_name]"
-              id="AddressFirstNameNew"
-              value="{{ form.first_name }}"
-              autocapitalize="words">
-
-        <label for="AddressLastNameNew">
-          {{ 'customer.addresses.last_name' | t }}
-        </label>
-        <input type="text"
-              name="address[last_name]"
-              id="AddressLastNameNew"
-              value="{{ form.last_name }}"
-              autocapitalize="words">
-
-        <label for="AddressCompanyNew">
-          {{ 'customer.addresses.company' | t }}
-        </label>
-        <input type="text"
-              name="address[company]"
-              id="AddressCompanyNew"
-              value="{{ form.company }}"
-              autocapitalize="words">
-
-        <label for="AddressAddress1New">
-          {{ 'customer.addresses.address1' | t }}
-        </label>
-        <input type="text"
-              name="address[address1]"
-              id="AddressAddress1New"
-              value="{{ form.address1 }}"
-              autocapitalize="words">
-
-        <label for="AddressAddress2New">
-          {{ 'customer.addresses.address2' | t }}
-        </label>
-        <input type="text"
-              name="address[address2]"
-              id="AddressAddress2New"
-              value="{{ form.address2 }}"
-              autocapitalize="words">
-
-        <label for="AddressCityNew">
-          {{ 'customer.addresses.city' | t }}
-        </label>
-        <input type="text"
-              name="address[city]"
-              id="AddressCityNew"
-              value="{{ form.city }}"
-              autocapitalize="words">
-
-        <label for="AddressCountryNew">
-          {{ 'customer.addresses.country' | t }}
-        </label>
-        <select data-address-country
-          name="address[country]"
-          id="AddressCountryNew"
-          data-default="{{ form.country }}">
-        </select>
-
-        <div data-address-province-wrapper class="hide">
-          <label for="AddressProvinceNew">
-            {{ 'customer.addresses.province' | t }}
-          </label>
-          <select data-address-province
-            name="address[province]"
-            id="AddressProvinceNew"
-            data-default="{{ form.province }}">
-          </select>
+        <div data-address-fields class="address-form">
+          <div>
+            <label for="AddressFirstNameNew">
+              {{ 'customer.addresses.first_name' | t }}
+            </label>
+            <input type="text"
+            name="address[first_name]"
+            id="AddressFirstNameNew"
+            value="{{ form.first_name }}"
+            autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressLastNameNew">
+              {{ 'customer.addresses.last_name' | t }}
+            </label>
+            <input type="text"
+                  name="address[last_name]"
+                  id="AddressLastNameNew"
+                  value="{{ form.last_name }}"
+                  autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressCompanyNew">
+              {{ 'customer.addresses.company' | t }}
+            </label>
+            <input type="text"
+                  name="address[company]"
+                  id="AddressCompanyNew"
+                  value="{{ form.company }}"
+                  autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressAddress1New">
+              {{ 'customer.addresses.address1' | t }}
+            </label>
+            <input type="text"
+                  name="address[address1]"
+                  id="AddressAddress1New"
+                  value="{{ form.address1 }}"
+                  autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressAddress2New">
+              {{ 'customer.addresses.address2' | t }}
+            </label>
+            <input type="text"
+                  name="address[address2]"
+                  id="AddressAddress2New"
+                  value="{{ form.address2 }}"
+                  autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressCityNew">
+              {{ 'customer.addresses.city' | t }}
+            </label>
+            <input type="text"
+                  name="address[city]"
+                  id="AddressCityNew"
+                  value="{{ form.city }}"
+                  autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressCountryNew">
+              {{ 'customer.addresses.country' | t }}
+            </label>
+            <select
+              name="address[country]"
+              id="AddressCountryNew"
+              data-default="{{ form.country }}">
+            </select>
+          </div>
+          <div>
+            <label for="AddressProvinceNew">
+              {{ 'customer.addresses.province' | t }}
+            </label>
+            <select
+              name="address[province]"
+              id="AddressProvinceNew"
+              data-default="{{ form.province }}">
+            </select>
+          </div>
+          <div>
+            <label for="AddressZipNew">
+              {{ 'customer.addresses.zip' | t }}
+            </label>
+            <input type="text"
+                  name="address[zip]"
+                  id="AddressZipNew"
+                  value="{{ form.zip }}"
+                  autocapitalize="characters">
+          </div>
+          <div>
+            <label for="AddressPhoneNew">
+              {{ 'customer.addresses.phone' | t }}
+            </label>
+            <input type="tel"
+                  name="address[phone]"
+                  id="AddressPhoneNew"
+                  value="{{ form.phone }}"
+                  pattern="[0-9\-]*">
+          </div>
         </div>
-
-        <label for="AddressZipNew">
-          {{ 'customer.addresses.zip' | t }}
-        </label>
-        <input type="text"
-              name="address[zip]"
-              id="AddressZipNew"
-              value="{{ form.zip }}"
-              autocapitalize="characters">
-
-        <label for="AddressPhoneNew">
-          {{ 'customer.addresses.phone' | t }}
-        </label>
-        <input type="tel"
-              name="address[phone]"
-              id="AddressPhoneNew"
-              value="{{ form.phone }}"
-              pattern="[0-9\-]*">
-
         {{ form.set_as_default_checkbox }}
         <label for="address_default_address_new">
           {{ 'customer.addresses.set_default' | t }}
@@ -125,7 +135,6 @@
   {% for address in customer.addresses %}
 
     <div data-address>
-
       {% if address == customer.default_address %}
         <p><strong>{{ 'customer.addresses.default' | t }}</strong></p>
       {% endif %}
@@ -145,101 +154,117 @@
         {% form 'customer_address', address %}
 
         <h4>{{ 'customer.addresses.edit_address' | t }}</h4>
+        <div data-address-fields class="address-form">
+          <div>
+            <label for="AddressFirstName_{{ form.id }}">
+              {{ 'customer.addresses.first_name' | t }}
+            </label>
+            <input type="text"
+                  name="address[first_name]"
+                  id="AddressFirstName_{{ form.id }}"
+                  value="{{ form.first_name }}"
+                  autocapitalize="words">
 
-        <label for="AddressFirstName_{{ form.id }}">
-          {{ 'customer.addresses.first_name' | t }}
-        </label>
-        <input type="text"
-              name="address[first_name]"
-              id="AddressFirstName_{{ form.id }}"
-              value="{{ form.first_name }}"
-              autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressLastName_{{ form.id }}">
+              {{ 'customer.addresses.last_name' | t }}
+            </label>
+            <input type="text"
+                  name="address[last_name]"
+                  id="AddressLastName_{{ form.id }}"
+                  value="{{ form.last_name }}"
+                  autocapitalize="words">
 
-        <label for="AddressLastName_{{ form.id }}">
-          {{ 'customer.addresses.last_name' | t }}
-        </label>
-        <input type="text"
-              name="address[last_name]"
-              id="AddressLastName_{{ form.id }}"
-              value="{{ form.last_name }}"
-              autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressCompany_{{ form.id }}">
+              {{ 'customer.addresses.company' | t }}
+            </label>
+            <input type="text"
+                  name="address[company]"
+                  id="AddressCompany_{{ form.id }}"
+                  value="{{ form.company }}"
+                  autocapitalize="words">
 
-        <label for="AddressCompany_{{ form.id }}">
-          {{ 'customer.addresses.company' | t }}
-        </label>
-        <input type="text"
-              name="address[company]"
-              id="AddressCompany_{{ form.id }}"
-              value="{{ form.company }}"
-              autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressAddress1_{{ form.id }}">
+              {{ 'customer.addresses.address1' | t }}
+            </label>
+            <input type="text"
+                  name="address[address1]"
+                  id="AddressAddress1_{{ form.id }}"
+                  value="{{ form.address1 }}"
+                  autocapitalize="words">
 
-        <label for="AddressAddress1_{{ form.id }}">
-          {{ 'customer.addresses.address1' | t }}
-        </label>
-        <input type="text"
-              name="address[address1]"
-              id="AddressAddress1_{{ form.id }}"
-              value="{{ form.address1 }}"
-              autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressAddress2_{{ form.id }}">
+              {{ 'customer.addresses.address2' | t }}
+            </label>
+            <input type="text"
+                  name="address[address2]"
+                  id="AddressAddress2_{{ form.id }}"
+                  value="{{ form.address2 }}"
+                  autocapitalize="words">
 
-        <label for="AddressAddress2_{{ form.id }}">
-          {{ 'customer.addresses.address2' | t }}
-        </label>
-        <input type="text"
-              name="address[address2]"
-              id="AddressAddress2_{{ form.id }}"
-              value="{{ form.address2 }}"
-              autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressCity_{{ form.id }}">
+              {{ 'customer.addresses.city' | t }}
+            </label>
+            <input type="text"
+                  name="address[city]"
+                  id="AddressCity_{{ form.id }}"
+                  value="{{ form.city }}"
+                  autocapitalize="words">
 
-        <label for="AddressCity_{{ form.id }}">
-          {{ 'customer.addresses.city' | t }}
-        </label>
-        <input type="text"
-              name="address[city]"
-              id="AddressCity_{{ form.id }}"
-              value="{{ form.city }}"
-              autocapitalize="words">
+          </div>
+          <div>
+            <label for="AddressCountry_{{ form.id }}">
+              {{ 'customer.addresses.country' | t }}
+            </label>
+            <select
+              name="address[country]"
+              id="AddressCountry_{{ form.id }}"
+              class="address-country-option"
+              data-form-id="{{ form.id }}"
+              data-default="{{ form.country }}">
+            </select>
 
-        <label for="AddressCountry_{{ form.id }}">
-          {{ 'customer.addresses.country' | t }}
-        </label>
-        <select data-address-country
-          name="address[country]"
-          id="AddressCountry_{{ form.id }}"
-          class="address-country-option"
-          data-form-id="{{ form.id }}"
-          data-default="{{ form.country }}">
-        </select>
-
-        <div id="AddressProvinceContainer_{{ form.id }}" data-address-province-wrapper class="hide">
-          <label for="AddressProvince_{{ form.id }}">
-            {{ 'customer.addresses.province' | t }}
-          </label>
-          <select data-address-province
-            name="address[province]"
-            id="AddressProvince_{{ form.id }}"
-            data-default="{{ form.province }}">
-          </select>
+            <div>
+              <label for="AddressProvince_{{ form.id }}">
+                {{ 'customer.addresses.province' | t }}
+              </label>
+              <select
+                name="address[province]"
+                id="AddressProvince_{{ form.id }}"
+                data-default="{{ form.province }}">
+              </select>
+            </div>
+          </div>
+          <div>
+            <label for="AddressZip_{{ form.id }}">
+              {{ 'customer.addresses.zip' | t }}
+            </label>
+            <input type="text"
+                  name="address[zip]"
+                  id="AddressZip_{{ form.id }}"
+                  value="{{ form.zip }}"
+                  autocapitalize="characters">
+          </div>
+          <div>
+            <label for="AddressPhone_{{ form.id }}">
+              {{ 'customer.addresses.phone' | t }}
+            </label>
+            <input type="tel"
+                  name="address[phone]"
+                  id="AddressPhone_{{ form.id }}"
+                  value="{{ form.phone }}"
+                  pattern="[0-9\-]*">
+          </div>
         </div>
-
-        <label for="AddressZip_{{ form.id }}">
-          {{ 'customer.addresses.zip' | t }}
-        </label>
-        <input type="text"
-              name="address[zip]"
-              id="AddressZip_{{ form.id }}"
-              value="{{ form.zip }}"
-              autocapitalize="characters">
-
-        <label for="AddressPhone_{{ form.id }}">
-          {{ 'customer.addresses.phone' | t }}
-        </label>
-        <input type="tel"
-              name="address[phone]"
-              id="AddressPhone_{{ form.id }}"
-              value="{{ form.phone }}"
-              pattern="[0-9\-]*">
-
         {{ form.set_as_default_checkbox }}
         <label for="address_default_address_{{ form.id }}">
           {{ 'customer.addresses.set_default' | t }}
