--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -17,6 +17,37 @@
   &[disabled] {
     cursor: default;
   }
+
+  &.is-adding {
+    position: relative;
+
+    &:after,
+    &:before {
+      content: '';
+      position: absolute;
+    }
+
+    &:before {
+      top: 50%;
+      left: 50%;
+      border: 2px solid currentColor;
+      border-top: 2px solid transparent;
+      border-radius: 50%;
+      width: $font-size-base;
+      height: $font-size-base;
+      /* stylelint-disable-next-line no-unknown-animations */
+      animation: button-spinner 0.5s ease-in-out infinite;
+      z-index: $z-index-overlay;
+    }
+
+    &:after {
+      width: 100%;
+      height: 100%;
+      background-color: inherit;
+      top: 0;
+      left: 0;
+    }
+  }
 }
 
 .btn--secondary {
