--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -117,6 +117,7 @@ $input-padding-top-bottom: rem(10px);
 $input-padding-left-right: rem(15px);
 
 // z-index
+$z-index-overlay: 2;
 $z-index-drawer: 10;
 
 // Transitions
